Added caching example